--- a/private_dot_ssh/config
+++ b/private_dot_ssh/config
@@ -1,17 +1,18 @@
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
 
-Host BecodeVm
+Host vmsdt-gilchrist.becode.org
     Hostname vmsdt-gilchrist.becode.org
     #100.64.114.83
 	User ewan
 	Port 911
-    #RemoteForward /run/user/1000/gnupg/S.gpg-agent /run/user/1000/gnupg/S.gpg-agent.extra
+    RemoteForward /home/ewan/.gnupg/S.gpg-agent /run/user/1000/gnupg/S.gpg-agent #.extra
+    #RemoteForward /home/ewan/.gnupg/S.gpg-agent /home/ewan/.gnupg/S.gpg-agent.extra
 
 Host susflatnine
 	Hostname 100.123.47.44
 	User ewan
 	Port 417
-	RemoteForward /run/user/1000/gnupg/S.gpg-agent /run/user/1000/gnupg/S.gpg-agent.extra
+    RemoteForward /run/user/1000/gnupg/S.gpg-agent /run/user/1000/gnupg/S.gpg-agent.extra
 
 Host pi
 	Hostname 100.64.172.89
