--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -3,6 +3,6 @@
 .config/kitty
 .config/waybar
 {{- end }}
-{{- if ne .chezmoi.arch "amd64" }}
+{{- if ne .chezmoi.arch "arm64" }}
 .config/nvim
 {{- end }}
