Update kitty config and themes

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1542,6 +1542,6 @@ map ctrl+down neighboring_window down
 
 # BEGIN_KITTY_THEME
 # Tokyo Night
-# include current-theme.conf
-include sonokai-maia.conf
+include current-theme.conf
+# include sonokai-maia.conf
 # END_KITTY_THEME
